-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Component/s: 3D Graphics, Win32SS, Wine
-
Labels:
-
Module:
-
Guilty Revision:75,061
r75060 palette was at least in a semi-working state.
We did some work on WineD3D towards the new Mesa3D rapps download in r75061 which lead to regression CORE-13486. We fixed the most important crash-regressions over there.
What still needs to be adressed are the palette issues in:
-Diablo 2
-MS Age Of Empires
-Anno 1602
Ros-Log spams
err:(../dll/directx/wine/wined3d/palette.c:88) Failed to set DIB color table.
|
- blocks
-
CORE-13362 Syncing ReactOS with Wine Staging 2.9
-
- Untriaged
-
- is blocked by
-
CORE-13486 [WINED3D] regression: MSAOE1 trial dies with unhandled exception in d3dwine.dll upon startup
-
- Resolved
-
- is duplicated by
-
CORE-13821 AHK: "Wine Test > zz_lbreakout2_2.4.1 > 2.local_game" hangs (the suite), since r75847
-
- Resolved
-
- relates to
-
CORE-15652 Diablo II shareware crashes with Wine assertion when run in fullscreen mode
-
- Resolved
-