[0.4.7][WIN32SS][NTDDRAW] Fix ddraw palette regression CORE-13714

This nice patch of Jerome Gardou improves palette
when VBEMP & inbuilt Mesa is used for
Diablo II, MS Age Of Empires 1, Anno 1602
to the state we had in SVN r75060 and below.

Palette still not perfect in fullscreen but at least as good as it was before
it regressed by SVN r75061 == git
4b0ee92f91c75dc0a273ff24e4d9884c38aa379f

We do intend to improve on the remaining fullscreen palette issues in CORE-10738.

fix cherry picked from 0.4.9-dev-675-g
14f0e62f9a3895699f9202335516f16e610dd24d